force-app/main/default/objects/Re_Plastic_Innovations_Recycled_Product__c/Re_Plastic_Innovations_Recycled_Product__c.object-meta.xml
<CustomObject>
    <label>Recycled Product</label>
    <nameField>
        <label>Recycled Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Recycled Products</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>