force-app/main/default/objects/Re_Plastic_Innovations_Recycled_Product__c/fields/Stock_Low_On_Product__c.field-meta.xml
<CustomField>
    <fullName>Stock_Low_On_Product__c</fullName>
    <formula>IF(Stock_Level__c &lt; Threshold__c, &quot;Low Stock - Restock Needed&quot;, &quot;Sufficient Stock&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Stock Low On Product</label>
    <type>Text</type>
</CustomField>