force-app/main/default/objects/Re_Plastic_Innovations_Recycled_Product__c/fields/Threshold__c.field-meta.xml
<CustomField>
    <fullName>Threshold__c</fullName>
    <description>Minimum stock before restock is triggered</description>
    <label>Threshold</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>